kubernetes/main/core/security/glauth/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: glauth
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: glauth
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authelia
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP

# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: apps-to-glauth
spec:
  description: "Allow ingress from apps to glauth"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: glauth
      io.kubernetes.pod.namespace: security

  ingress:
    - fromEndpoints:
        - matchLabels:
            auth.home.arpa/ldap: allow
      toPorts:
        - ports:
            - port: "389"
              protocol: TCP

# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: apps-to-glauth-egress
spec:
  description: "Allow egress from apps to glauth"
  endpointSelector:
    matchLabels:
      auth.home.arpa/ldap: allow

  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: glauth
            io.kubernetes.pod.namespace: security
      toPorts:
        - ports:
            - port: "389"
              protocol: TCP
